[package]
name = "mebooru"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.1", features = ["derive"] }
clap-num = "1.0.2"
gelbooru-api = "0.4.0"
tokio = { version = "1", features = ["full"] }
tokio-scoped = "0.2.0"

[dependencies.hyper]
version = "0.14"

[dependencies.hyper-rustls]
version = "0.23"
